--- a/Faisal personal portfolio/index.html
+++ b/Faisal personal portfolio/index.html
@@ -96,15 +96,13 @@
                     carrying out several successful projects.
                   </p>
                   <div class="about__social">
-                    <a href="https://www.linkedin.com/" target="_blank" class="about__link">
+                    <a href="https://www.linkedin.com/in/faisal-huston-6309072b3/" target="_blank" class="about__link">
                       <i class="ri-linkedin-box-line"></i>
                     </a>
-                    <a href="https://github.com/" target="_blank" class="about__link">
+                    <a href="https://github.com/Faisalshingiro" target="_blank" class="about__link">
                       <i class="ri-github-line"></i>
                     </a>
-                    <a href="https://www.behance.net/" target="_blank" class="about__link">
-                    <i class="ri-behance-line"></i>
-                    </a>
+                    
                   </div>
                     
                   <div class="about__image">
