--- a/Faisal personal portfolio/index.html
+++ b/Faisal personal portfolio/index.html
@@ -75,7 +75,7 @@
                 </div>
                  
                 <div class="info__image">
-                   <img src="img/faisal (2).png" alt="image" class="info__img">
+                   <img src="img/10.png" alt="image" class="info__img">
                 </div>
                  <p class="info__description">
                   Passionate about creating and designing
