--- a/Faisal personal portfolio/index.html
+++ b/Faisal personal portfolio/index.html
@@ -82,7 +82,7 @@
                   Passionate about creating and designing
                   websites with the best engaging interfaces.
                  </p>
-                <a href="assets/CV_Faisal.pdf" download target="_blank" class="button button__black">Download CV</a>
+                <a href="assets/Faisal_Shingiro_CV.pdf" download target="_blank" class="button button__black">Download CV</a>
                </div>
 
 
