Added another project link

--- a/Faisal personal portfolio/index.html
+++ b/Faisal personal portfolio/index.html
@@ -154,8 +154,8 @@
                <div class="projects__data">
                 <h3 class="projects__name">Hobe Center Website</h3>
                 <p class="projects__description">
-                  Short description of the project that
-                  was carried out in this portfolio.
+                  This is a structured informational platform designed for an organization.
+                  The emphasis was on clean UI, content structure, and user experience, while keeping the system maintainable and scalable
                 </p>
                 <div class="projects__skills">
                   <img src="img/skills-react.svg" alt="image" class="projects__skill">
@@ -176,8 +176,8 @@
                <div class="projects__data">
                 <h3 class="projects__name">Silversure Consult Website</h3>
                 <p class="projects__description">
-                  Short description of the project that
-                  was carried out in this portfolio.
+                 This project focuses on frontend architecture and deployment.
+                  I worked on component structure, responsiveness, and performance, and deployed it using modern CI/CD-style workflows on Vercel.
                 </p>
                 <div class="projects__skills">
                   <img src="img/skills-html.svg" alt="image" class="projects__skill">
@@ -195,20 +195,20 @@
 
              <article class="projects__card">
               <a href="" class="projects__image">
-                <img src="img/projects-3.jpg" alt="image" class="projects__img">
+                <img src="img/image.png" alt="image" class="projects__img">
               </a>
                <div class="projects__data">
-                <h3 class="projects__name">Restaurant Landing Page</h3>
+                <h3 class="projects__name">Grocery Website</h3>
                 <p class="projects__description">
-                  Short description of the project that
-                  was carried out in this portfolio.
+                  Groco is a responsive grocery web platform that simulates an e-commerce shopping experience.
+                   Users can browse categories, filter products, add items to a cart, and engage with content like reviews and blogs
                 </p>
                 <div class="projects__skills">
                   <img src="img/skills-html.svg" alt="image" class="projects__skill">
                   <img src="img/skills-css.svg" alt="image" class="projects__skill">
                   <img src="img/skills-javascript.svg" alt="image" class="projects__skill">
                 </div>
-                <a href="#" target="_blank" class="projects__button">
+                <a href="https://groco-app-iota.vercel.app/" target="_blank" class="projects__button">
                   <i class="ri-link"></i>
                   <span>Visit Project</span>
                 </a>
