--- a/Faisal personal portfolio/index.html
+++ b/Faisal personal portfolio/index.html
@@ -195,7 +195,7 @@
 
              <article class="projects__card">
               <a href="" class="projects__image">
-                <img src="img/image.png" alt="image" class="projects__img">
+                <img src="img/fruit.png" alt="image" class="projects__img">
               </a>
                <div class="projects__data">
                 <h3 class="projects__name">Grocery Website</h3>
