added some images

--- a/Faisal personal portfolio/index.html
+++ b/Faisal personal portfolio/index.html
@@ -149,6 +149,29 @@
           <div class="projects__container container grid">
              <article class="projects__card">
               <a href="" class="projects__image">
+                <img src="img/greentrack.png" alt="image" class="projects__img">
+              </a>
+               <div class="projects__data">
+                <h3 class="projects__name">GreenTrack Smart Waste Collection</h3>
+                <p class="projects__description">
+                  GreenTrack is a web-based waste collection and recycling awareness system. I built it using ASP.NET with user registration, authentication, dashboards, and backend data handling.
+                  The focus was on managing user data, tracking payments or requests, and supporting an admin workflow
+                </p>
+                <div class="projects__skills">
+                  <img src="img/Asp.net.svg" alt="image" class="projects__skill">
+                  <img src="img/skills-react.svg" alt="image" class="projects__skill">
+                  <img src="img/skills-html.svg" alt="image" class="projects__skill">
+                  <img src="img/skills-css.svg" alt="image" class="projects__skill">
+                  <img src="img/c-1.svg" alt="image" class="projects__skill">
+                </div>
+                <a href="https://greentrack-rwanda.somee.com/" target="_blank" class="projects__button">
+                  <i class="ri-link"></i>
+                  <span>Visit Project</span>
+                </a>
+               </div>
+             </article>
+             <article class="projects__card">
+              <a href="" class="projects__image">
                 <img src="img/hobe.png" alt="image" class="projects__img">
               </a>
                <div class="projects__data">
