Improved my project

--- a/Faisal personal portfolio/index.html
+++ b/Faisal personal portfolio/index.html
@@ -298,8 +298,7 @@
               </div>
               <h3 class="services__name">Web Development</h3>
               <p class="servicess__description">
-                Short description of the service offered
-                to users to obtain a personalized project.
+                I build responsive and scalable websites tailored to your business needs, from static pages to full-stack web applications.
               </p>
             </article>
              
@@ -310,8 +309,7 @@
               </div>
               <h3 class="services__name">IT Support</h3>
               <p class="servicess__description">
-                Short description of the service offered
-                to users to obtain a personalized project.
+                Providing reliable IT support and system troubleshooting to ensure your applications and infrastructure run smoothly
               </p>
             </article>
 
@@ -322,8 +320,7 @@
               </div>
               <h3 class="services__name">Figma Design</h3>
               <p class="servicess__description">
-                Short description of the service offered
-                to users to obtain a personalized project.
+                Creating intuitive and visually appealing UI/UX designs with Figma, turning ideas into interactive prototypes for your projects.
               </p>
             </article>
           </div>
@@ -339,10 +336,9 @@
 
                 <div class="experience__data">
                   <h3 class="experience__profession">Website Development and IT Support</h3>
-                  <span class="experience__date">08/24 - 06/25</span>
+                  <span class="experience__date">08/24 - 12/25</span>
                   <p class="experience__description">
-                    Short description of the service offered
-                    to users to obtain a personalized project.
+                   Delivered end-to-end web development solutions and ongoing IT support, ensuring personalized projects met client requirements efficiently.
                   </p>
                 </div>
               </article>
@@ -351,11 +347,10 @@
                 <h2 class="experience__company">SolvIT AFRICA</h2>
 
                 <div class="experience__data">
-                  <h3 class="experience__profession">Web Designer</h3>
+                  <h3 class="experience__profession">Intern</h3>
                   <span class="experience__date">10/22 - 04/23</span>
                   <p class="experience__description">
-                    Short description of the service offered
-                    to users to obtain a personalized project.
+                    Learned and Designed modern and user-friendly websites using Figma and frontend technologies, improving user experience and project engagement.
                   </p>
                 </div>
               </article>
